# SerDesSystemCProject

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  KNOWN_ISSUES.md  Makefile  PROJECT_SUMMARY.md  README.md  README_EN.md  README_ZH.md  SystemC-AMS SerDes Modeling.md  channel_rational_metadata.json  channel_rational_waveform.csv  checklist.md  demo_eye_analyzer.py  requirements.txt  test_config_rational_order12.json  test_config_state_space.json
.kimi-dev/: progress.md  status.md
config/: default.json  default.yaml
docs/: build_guide.md  eye_analyzer_api_reference.md  features.json  progress.txt  review_report_channel_ch2_attempt1.md  review_report_channel_ch3_attempt1.md  review_report_channel_ch4_attempt1.md  review_report_channel_ch5.md  review_report_channel_ch6_attempt1.md  review_report_mux_ch7_attempt6.md
eye_analyzer/: __init__.py  analyzer.py  core.py  io.py  jitter.py  utils.py
scripts/: analyze_eye.py  fix_systemc_ams.sh  generate_modules.sh  generate_vf_comparison.py  plot_cdr_phase.py  rebuild_systemc_ams.sh  run_ffe_tests.sh  run_wavegen_tests.sh  test_vf_integration.py  vector_fitting_py.py
tb/: CMakeLists.txt  simple_link_tb.cpp
tb/channel/: channel_sparam_tb.cpp  test_ltf_format.cpp
tb/periphery/: clock_generation_tb.cpp
tb/periphery/wave_gen/: wave_gen_helpers.h  wave_gen_tran_tb.cpp
tb/rx/adaption/: adaption_helpers.h  adaption_tran_tb.cpp
tb/rx/cdr/: cdr_helpers.h  cdr_tran_tb.cpp
tb/top/: nrz_link_config.h
tb/tx/ffe/: ffe_helpers.h  ffe_tran_tb.cpp
tests/: CMakeLists.txt  test_main.cpp  (+1 more)
(+130 files in other folders)
